[package]
name = "interustception"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wdk = {git = "https://github.com/microsoft/windows-drivers-rs.git", branch = "main"}
wdk-alloc = {git = "https://github.com/microsoft/windows-drivers-rs.git", branch = "main"}
wdk-panic = {git = "https://github.com/microsoft/windows-drivers-rs.git", branch = "main"}
wdk-sys = {git = "https://github.com/microsoft/windows-drivers-rs.git", branch = "main"}
paste = "1.0.14"
bytemuck = { version = "1.14.0"}
num_enum = {version = "0.7.2", default-features = false, features = []}
snafu = {version = "0.8.0", default-features = false, features = []}
nt-string = {version = "0.1.1", default-features = false, features = ["alloc"]}

[package.metadata.wdk]

[build-dependencies]
wdk-build = {git = "https://github.com/microsoft/windows-drivers-rs.git", branch = "main"}

[features]

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"
lto = true # optional setting to enable Link Time Optimizations

[profile.release]
panic = "abort"
lto = true # optional setting to enable Link Time Optimizations
